<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/question1"
        android:layout_width="687dp"
        android:layout_height="107dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:gravity="center"
        android:text="Hello World!"
        android:textColor="@color/dawn"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="100dp"


        android:layout_margin="8dp"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:onClick="chooseTrue"
        android:text="@string/button2"
        app:backgroundTint="@color/red"
        app:iconTint="@color/dawn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/button1"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:onClick="chooseFalse"
        android:text="@string/button1"
        app:backgroundTint="@color/purple"
        app:iconTint="@color/dawn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="@+id/question1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="164dp"
        android:layout_height="78dp"
        android:layout_marginEnd="380dp"
        android:layout_marginRight="380dp"
        android:layout_marginBottom="44dp"
        android:onClick="nextQuestion"
        android:text="@string/btn_next"
        app:backgroundTint="@color/orange"
        app:iconTint="@color/dawn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>