<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/home_btn_aprende"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:onClick="goto_debugger"
        android:text="@string/home_btn_aprende"
        android:textSize="24sp"
        app:backgroundTint="@color/pink"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/main_btn_quiz"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="32dp"
        android:onClick="goto_quiz"
        android:radius="25dp"
        android:text="@string/home_btn_quiz"
        android:textSize="24sp"
        app:backgroundTint="@color/dusk"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_btn_aprende"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_text_background"
        android:layout_width="608dp"
        android:layout_height="207dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:radius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="470dp"
            android:layout_height="157dp"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Home_text"
            android:textColor="@color/dawn"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>