<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44475a"
    tools:context=".RunFragment">


    <TextView
        android:id="@+id/TVOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="161dp"
        android:text="@string/operator"
        android:textColor="#8be9fd"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TVData1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ETOperator"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="161dp" />

    <TextView
        android:id="@+id/TVData1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="100dp"
        android:text="@string/dato1"
        android:textColor="#8be9fd"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TVData2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ETData1"
        app:layout_constraintTop_toBottomOf="@+id/TVOperator"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/TVData2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:text="@string/dato2"
        android:textColor="#8be9fd"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ETData2"
        app:layout_constraintTop_toBottomOf="@+id/TVData1"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="100dp" />

    <EditText
        android:id="@+id/ETOperator"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ETData1"
        app:layout_constraintEnd_toStartOf="@+id/TVOperator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="29dp" />

    <EditText
        android:id="@+id/ETData1"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ETData2"
        app:layout_constraintEnd_toStartOf="@+id/TVData1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETOperator"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="29dp" />

    <EditText
        android:id="@+id/ETData2"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="276dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/BRun"
        app:layout_constraintEnd_toStartOf="@+id/TVData2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETData1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="29dp" />

    <Button
        android:id="@+id/BRun"
        android:layout_width="308dp"
        android:layout_height="93dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#6272a4"
        android:text="@string/run"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVData2"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="54dp" />
</androidx.constraintlayout.widget.ConstraintLayout>