<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night"
    tools:context=".debugger">

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.quiz.BugFragment"
        android:layout_width="237dp"
        android:layout_height="289dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bugBtn"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bug"
        android:onClick="nextLine"
        android:rotation="21"
        android:rotationX="0"
        android:rotationY="10"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/debuggerTitleFunctions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="198dp"
        android:layout_marginRight="198dp"
        android:text="@string/titleFunctions"
        android:textColor="@color/dawn"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/play"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/bugBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="59dp"
        android:layout_height="52dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/abc_vector_test"
        app:backgroundTint="@color/dawn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/codeView"
        android:layout_width="422dp"
        android:layout_height="248dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/pythonCode"
        android:textColor="@color/dawn"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debuggerTitleFunctions" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginBottom="23dp"
        android:background="@color/twilight"
        android:gravity="center_horizontal|center_vertical"
        android:radius="25dp"
        android:text="@string/codeResult"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>